--- a/css/style.css
+++ b/css/style.css
@@ -30,6 +30,7 @@ main form input
 {
 	display: block;
 	width: 23.8rem;
+	max-width: 100%;
 	margin: 0 auto;
 	padding: 0.8rem;
 	text-align: right;
@@ -105,7 +106,7 @@ main ul:nth-child(4) button,
 main ul:nth-child(5) button,
 main ul:nth-child(6) button
 {
-	background-color: #4F4F4F;
+	background-color: #7d7d7d;
 }
 
 main ul li:last-child button
