--- a/css/style.css
+++ b/css/style.css
@@ -43,12 +43,10 @@ main form input
 	color: #fcfcfc;
 	border: none;
 	overflow: auto;
+	outline: none;
 }
 
-main form input:focus
-{
-	outline: 0.5px solid rgba(200, 200, 200, 0.5);
-}
+
 
 main ul 
 {
